# viewtouch

./: .clang-tidy  .gitignore  .travis.yml  CATCH2_V3_MIGRATION.md  CMakeLists.txt  CMakeListsGTK.txt  DATA_PERSISTENCE_SYSTEM.md  EMBOSSED_TEXT_FEATURE.md  LICENSE  Makefile  Makefile.in  README.md  README_GTK.txt  SCALABLE_FONTS_MIGRATION.md  SECURITY.md  TEXT_ENHANCEMENT_FEATURES.md  UNIFIED_TARGETING_SUMMARY.md  basic.hh  build.sh  build_and_install.sh  build_number.h  build_number.h.in  changelog.md  check_dependencies.sh  conf_file.cc  conf_file.hh  configure  configure.in  data_file.cc  data_file.hh  data_persistence_manager.cc  data_persistence_manager.hh  debug.cc  debug.hh  debug_viewtouch.sh  error_handler.cc  error_handler.hh  fntrace.cc  fntrace.hh  font_check  (+26 more)
.github/workflows/: appimage.yml  linux-simple-builds.yml  raspberry-pi-builds.yml  universal-installer.yml
android/: README.md  viewtouch.patch
assets/default_images/: burger.xpm  coffee.xpm  pizza.xpm
authorize/: authorize_main.cc
cdu/: cdu_main.cc
ci/: Dockerfile.template  travis.sh
ci/toolchains/: clang-tidy.cmake  gcc-8.cmake
cmake/: check_toolchain_definition.cmake  gen_compiler_tag.cmake  gen_target_architecture.cmake  gen_toolchain_definitions.cmake  gen_version_string.cmake  install_dependencies.cmake  load_git_variables.cmake
config/: font_ids.hh  reverse_ssh_daemon.conf  version.cmake
css/: vtpos.css
docs/: ARM64_SUPPORT.md  BUG_ANALYSIS.md  BUILD_OPTIMIZATIONS.md  CATCH2_INTEGRATION.md  CLEANUP_SUMMARY.md  CPP23_MODERNIZATION.md  CPP23_MODERNIZATION_PROGRESS.md  CPP23_STATUS_REPORT.md  CPP23_UPGRADE_SUMMARY.md  DEVELOPMENT.md  EMBOSSED_TEXT_FEATURE.md  F3_F4_RECORDING_CONTROL.md  MEMORY_MODERNIZATION.md  MIGRATION_TO_XFT.md  MODERN_CPP.md  PAYMENT_PROCESSOR_INTEGRATION.md  REVERSE_SSH.md  STRING_SAFETY.md  TESTING.md  TEXT_ENHANCEMENT_FEATURES.md  UNIFIED_TARGETING_SUMMARY.md  VIEWTOUCH_IMPROVEMENTS_SUMMARY.md  ViewTouch_Documentation.md  changelog.md
docs/user/: ITEMLIST_FILTER_FEATURE.md  QUICKBOOKS_EXPORT.md  TOUCHSCREEN_IMPROVEMENTS.md  ViewTouch_Documentation.md
fonts/: README.md  fonts.conf
graphics/: logofile
images/: README.md
installer-build/: installer-main.sh
loader/: loader_main.cc  loader_main_GTK.cc
main/: account.cc  account.hh  admission.cc  admission.hh  archive.cc  archive.hh  cdu.cc  cdu.hh  cdu_att.hh  chart.cc  chart.hh  check.cc  check.hh  credit.cc  credit.hh  customer.cc  customer.hh  drawer.cc  drawer.hh  employee.cc  employee.hh  exception.cc  exception.hh  expense.cc  expense.hh  inventory.cc  inventory.hh  labels.cc  labels.hh  labor.cc  labor.hh  license.cc  license.hh  license_hash.cc  license_hash.hh  locale.cc  locale.hh  manager.cc  manager.hh  printer.cc  (+18 more)
main/business/: account.cc  account.hh  check.cc  check.hh  customer.cc  customer.hh  employee.cc  employee.hh  inventory.cc  inventory.hh  labor.cc  labor.hh  sales.cc  sales.hh  tips.cc  tips.hh
main/data/: admission.cc  admission.hh  archive.cc  archive.hh  credit.cc  credit.hh  exception.cc  exception.hh  expense.cc  expense.hh  license_hash.cc  license_hash.hh  locale.cc  locale.hh  manager.cc  manager.hh  settings.cc  settings.hh  settings_enums.hh  system.cc  system.hh  terminal_config_example.cc
nbproject/: Package-Default.bash  configurations.xml  project.xml
po_file/: viewtouch.po_EL  viewtouch.po_EN  viewtouch.po_ES  viewtouch.po_FR  viewtouch.po_IT  viewtouch.po_PT
print/: print_main.cc
scripts/: BuildNumber.cmake  Makefile  arcfix  build_and_install.sh  callcenter.pl  generic_char.sh  get-latest-bins  getbuildnum  getmid.cc  modernize_cpp23.sh  paynow  remote_start  runonce  setbuildnum  vt_pingcheck  vtclean  vtcommands.pl  vtrestart  vtrun  vtstart.sh
term/: layer.cc  layer.hh  term_credit.cc  term_credit.hh  term_credit_cheq.cc  term_credit_cheq.hh  term_credit_mcve.cc  term_credit_mcve.hh  term_dialog.cc  term_dialog.hh  term_main.cc  term_view.cc  term_view.hh  touch_screen.cc  touch_screen.hh
tests/: CMakeLists.txt  main_test.cc
tests/conf_file/: CMakeLists.txt  test_conf_file.cc
tests/data_file/: CMakeLists.txt  test_data_file.cc
tests/image_data/: CMakeLists.txt  test_image_data.cc
tests/main/: CMakeLists.txt  manager_stub.cc  test_labor.cc  test_main.cc  test_report.cc
tests/mocks/: mock_settings.cc  mock_settings.hh  mock_terminal.cc  mock_terminal.hh
tests/time_info/: CMakeLists.txt  test_time_info.cc
tests/unit/: test_check.cc  test_conf_file.cc  test_coupon_calculations.cc  test_enhanced_logging.cc  test_error_handler.cc  test_input_validation.cc  test_list_utility.cc  test_memory_modernization.cc  test_report_generation.cc  test_safe_math.cc  test_safe_string_utils.cc  test_sales_tax_calculations.cc  test_settings.cc  test_time_operations.cc  test_utility.cc
tests/utility/: CMakeLists.txt  test_utility.cc
version/: main_print_version.cc  vt_version_info.cc  vt_version_info.hh
xpm/: bread-256.xpm  darkmarble-256.xpm  darkorangetexture-128-32.xpm  darkwood-10.xpm  embossed-8.xpm  gradient-8.xpm  gradient-brown.xpm  grass-6.xpm  gray-6.xpm  grayparchment-8.xpm  greenmarble-12.xpm  greySand.xpm  lava-256.xpm  litewood-8.xpm  litsand-6.xpm  parchment-6.xpm  redgravel-6.xpm  sand-8.xpm  silk-8.xpm  smoke-4.xpm  smoke-8.xpm  steel-8.xpm  velvet-8.xpm  water-10.xpm  whiteMesh.xpm  whitetexture-128-32.xpm  wood-10.xpm  woodfloor-12.xpm  yellowstucco-8.xpm
zone/: account_zone.cc  account_zone.hh  button_zone.cc  button_zone.hh  cdu_zone.cc  cdu_zone.hh  chart_zone.cc  chart_zone.hh  check_list_zone.cc  check_list_zone.hh  creditcard_list_zone.cc  creditcard_list_zone.hh  dialog_zone.cc  dialog_zone.hh  drawer_zone.cc  drawer_zone.hh  expense_zone.cc  expense_zone.hh  form_zone.cc  form_zone.hh  hardware_zone.cc  hardware_zone.hh  inventory_zone.cc  inventory_zone.hh  labor_zone.cc  labor_zone.hh  layout_zone.cc  layout_zone.hh  login_zone.cc  login_zone.hh  merchant_zone.cc  merchant_zone.hh  order_zone.cc  order_zone.hh  payment_zone.cc  payment_zone.hh  payout_zone.cc  payout_zone.hh  phrase_zone.cc  phrase_zone.hh  (+25 more)
(+194 files in other folders)
